Fix reset link which was hidden by footer on small height screen

--- a/geocity/apps/core/static/css/login.css
+++ b/geocity/apps/core/static/css/login.css
@@ -54,7 +54,7 @@ body {
 
   #login-content {
     width: 95%;
-    height: 600px;
+    height: auto;
     background: none;
     margin-top: 10px;
   }
